fixed overlapping of links

--- a/css/style.css
+++ b/css/style.css
@@ -533,6 +533,7 @@ figcaption details p {
     text-decoration: none;
     border-bottom: none;
     padding: 0 0.2em;
+    font-size:.84em;
 }
 
 .floe-content.floe-story a:hover,
